Adiciona envio de relatórios para cadastro de eventos
